--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
-  "private": true,
-  "scripts": {
-    "prod": "gulp --production",
-    "dev": "gulp watch"
+  "name": "biintux",
+  "version": "1.0.0",
+  "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img width=\"150\"src=\"https://laravel.com/laravel.png\"></a></p>",
+  "main": "gulpfile.js",
+  "directories": {
+    "test": "tests"
   },
-  "devDependencies": {
-    "bootstrap-sass": "^3.3.7",
-    "buble": "^0.15.1",
+  "dependencies": {
     "gulp": "^3.9.1",
-    "jquery": "^3.1.0",
-    "laravel-elixir": "^6.0.0-14",
+    "laravel-elixir": "^6.0.0-15",
+    "jquery": "^3.1.1",
+    "bootstrap-sass": "^3.3.7",
     "laravel-elixir-vue-2": "^0.2.0",
-    "laravel-elixir-webpack-official": "^1.0.2",
-    "lodash": "^4.16.2",
-    "vue": "^2.0.1",
-    "vue-loader": "^10.0.2",
-    "vue-resource": "^1.0.3"
-  }
+    "bootstrap-table": "^1.11.0",
+    "vue": "^2.1.3",
+    "vue-resource": "^1.0.3",
+    "lodash": "^4.17.2"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/marczeo/Biintux.git"
+  },
+  "author": "marczeo",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/marczeo/Biintux/issues"
+  },
+  "homepage": "https://github.com/marczeo/Biintux#readme"
 }
