--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
+        "tymon/jwt-auth": "0.5.*",
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*"
     },
