--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "tymon/jwt-auth": "0.5.*",
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*"
+        "laravel/framework": "5.3.*",
+        "laracasts/flash": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
