--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "test": "tests"
   },
   "dependencies": {
-    "gulp": "^3.9.1",
-    "laravel-elixir": "^6.0.0-15",
-    "jquery": "^3.1.1",
     "bootstrap-sass": "^3.3.7",
-    "laravel-elixir-vue-2": "^0.2.0",
     "bootstrap-table": "^1.11.0",
+    "decode-google-map-polyline": "^1.0.1",
+    "gulp": "^3.9.1",
+    "jquery": "^3.1.1",
+    "laravel-elixir": "^6.0.0-15",
+    "laravel-elixir-vue-2": "^0.2.0",
+    "lodash": "^4.17.2",
     "vue": "^2.1.3",
-    "vue-resource": "^1.0.3",
-    "lodash": "^4.17.2"
+    "vue-resource": "^1.0.3"
   },
   "devDependencies": {},
   "scripts": {
