--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "laracasts/flash": "^2.0",
-        "guzzlehttp/guzzle": "~4.0"
+        "guzzlehttp/guzzle": "~4.0",
+        "paragonie/random_compat": "~1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
